tests/sources/invalid/generics/generic_class_type_arg_errors.fire
// Malformed type-argument lists in a generic class instantiation used as a
// variable-declaration type, e.g. `Pair<TYPE_ARGS> name = ...;`.
class Pair<T, U> {
    a: T;
    b: U;

    fn Pair(a: T, b: U) {
        this.a = a;
        this.b = b;
    }
}

// Missing first type argument.
fn main() -> int32 {
    p: Pair<,int32> = Pair(1, 2);  //~ ERROR FS-PARSE-0010 @13
//~^ ERROR FS-PARSE-0012 @23
    return 0;
}
